--- a/Bonus_1/index.html
+++ b/Bonus_1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Posts</title>
+    <title>Bonus_1: Social Posts</title>
 
     <script src="https://kit.fontawesome.com/1e3be9b4ce.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
